lo sigo sin conseguir

--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -281,8 +281,10 @@
    ],
    "source": [
     "term_freq = []\n",
+    "list_corpus2=[]\n",
     "for i in corpus2:\n",
-    "    for e in bag_of_words:\n",
+    "    \n",
+    "    \n",
     "        \n",
     "    \n",
     "\n",
