--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -273,18 +273,7 @@
      "text": [
       "corpus ['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n",
       "bag ['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n",
-      "['ironhack', 'is', 'cool']\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-109-42ebb7c4894c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbag_of_words\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m             \u001b[0mterm_freq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+      "term [[1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 0, 0, 1, 1, 0, 0, 0, 0], [1, 0, 0, 1, 0, 1, 1, 1, 1]]\n"
      ]
     }
    ],
@@ -295,36 +284,21 @@
     "print(\"bag\", bag_of_words)\n",
     "\n",
     "term_freq = []\n",
-    "lst = []\n",
-    "for i in corpus_lower:\n",
-    "    lst.append(i.split(\" \"))\n",
-    "for i in lst:\n",
-    "    print(i)\n",
-    "    for a in range(len(i)):\n",
-    "        if a[i] in bag_of_words[i]:\n",
-    "            term_freq.append(1)\n",
+    "\n",
+    "#for i in corpus_lower:\n",
+    "#    lst.append(i.split(\" \"))\n",
+    "#print(\"lst\", lst)\n",
+    "\n",
+    "\n",
+    "for i in corpus_lower: \n",
+    "    lst = []\n",
+    "    for a in bag_of_words:\n",
+    "        if a in i.split(' '):\n",
+    "            lst.append(1)\n",
     "        else:\n",
-    "            term_freq.append(0)\n",
-    "\n",
-    "  \n",
-    "print(lst)   \n",
-    "    \n",
-    "    \n",
-    "    #lst12 = [i.split(\" \")] \n",
-    "    #if a in lst12:\n",
-    "        \n",
-    "\n",
-    "#print('lst12', lst12)\n",
-    "\n",
-    "\n",
-    "\n",
-    "    \n",
-    "print(\"term\", term_freq)\n",
-    "\n",
-    " \n",
-    "#print(bag_of_words)\n",
-    "#print(corpus_lower)\n",
-    "# Write your code here"
+    "            lst.append(0)\n",
+    "    term_freq.append(lst)\n",
+    "print(\"term\", term_freq)\n"
    ]
   },
   {
@@ -338,14 +312,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 2, 2, 2, 2]\n"
+      "[1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1]\n"
      ]
     }
    ],
@@ -396,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
